# pylluvial

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  setup.py
pyalluvial/: __init__.py  aggregate.py  fit.py  plot.py  pyalluvial.py  stratum.py  utils.py
pylluvial/: __init__.py  plot.py  stratum.py
